--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -44,6 +44,18 @@
         android:padding="30sp"
         android:hint="year"
         />
+    <EditText
+        android:id="@+id/edit_text_all_pages"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:elevation="2dp"
+        android:inputType="textMultiLine"
+        android:padding="30sp"
+        android:hint="number of pages"
+        />
 
 
 </LinearLayout>
