--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -1,44 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.book.ViewBookActivity"
     android:orientation="vertical"
-    >
+    tools:context=".ui.book.ViewBookActivity">
 
-    <TextView
-        android:id="@+id/text_book_title"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="title" />
-    <TextView
-        android:id="@+id/text_book_author"
+        android:layout_margin="10dp"
+        android:background="@drawable/view_book_item_bakground"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/image_book_cover"
+            android:layout_width="90dp"
+            android:layout_height="140dp"
+            android:layout_margin="15dp"
+            tools:src="@tools:sample/avatars">
+
+        </ImageView>
+
+        <TextView
+            android:id="@+id/text_book_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_toEndOf="@+id/image_book_cover"
+            android:layout_toRightOf="@+id/image_book_cover"
+            android:text="title" />
+
+        <TextView
+            android:id="@+id/text_book_author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text_book_title"
+            android:layout_margin="10dp"
+            android:layout_toEndOf="@+id/image_book_cover"
+            android:layout_toRightOf="@+id/image_book_cover"
+            android:text="author" />
+
+        <TextView
+            android:id="@+id/text_book_year"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text_book_author"
+            android:layout_margin="10dp"
+            android:layout_toEndOf="@+id/image_book_cover"
+            android:layout_toRightOf="@+id/image_book_cover"
+            android:text="year" />
+    </RelativeLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="author" />
-    <TextView
-        android:id="@+id/text_book_year"
+        android:layout_margin="10dp"
+        android:background="@drawable/view_book_item_bakground"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text_book_all_pages_"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Pages:" />
+
+        <TextView
+            android:id="@+id/text_book_all_pages"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="var" />
+
+        <TextView
+            android:id="@+id/text_book_curent_page_"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Current Page: " />
+
+        <TextView
+            android:id="@+id/text_book_curent_page"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="var" />
+
+        <TextView
+            android:id="@+id/text_book_progress_"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Progress:" />
+
+        <TextView
+            android:id="@+id/text_book_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="var" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="year" />
-    <TextView
-        android:id="@+id/text_book_all_pages"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="all pages" />
-    <TextView
-        android:id="@+id/text_book_curent_page"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="current page" />
+        android:layout_margin="10dp"
+        android:background="@drawable/view_book_item_bakground"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text_book_pages_per_day_"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Pages per day " />
+
+        <TextView
+            android:id="@+id/text_book_pages_per_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="var" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/button_add_current_page"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:text="Add Current Page" />
 
 </LinearLayout>
