--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -122,9 +122,81 @@
             android:id="@+id/text_book_pages_per_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
             android:text="var" />
 
+        <TextView
+            android:id="@+id/text_book_pages_left_"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Pages left " />
+
+        <TextView
+            android:id="@+id/text_book_pages_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="var" />
+
+        <TextView
+            android:id="@+id/text_book_days_left_"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Days left " />
+
+        <TextView
+            android:id="@+id/text_book_days_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="var" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/view_book_item_bakground"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text_book_date_added_"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Started date " />
+
+        <TextView
+            android:id="@+id/text_book_date_added"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="var" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/view_book_item_bakground"
+        android:orientation="horizontal">
+    <TextView
+        android:id="@+id/text_book_date_last_page_"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="Last active date" />
+
+    <TextView
+        android:id="@+id/text_book_date_last_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="var" />
     </LinearLayout>
 
     <Button
