--- a/app/src/main/res/drawable/view_book_item_bakground.xml
+++ b/app/src/main/res/drawable/view_book_item_bakground.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     >
     <solid
-        android:color="#DDDDDD" />
+        android:color="#E6E6E6" />
     <corners
         android:radius="7sp" />
 </shape>
