--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -4,191 +4,245 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/appBackground"
     android:orientation="vertical"
     tools:context=".ui.book.ViewBookActivity">
 
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/view_book_item_bakground"
-        android:orientation="vertical">
+        app:cardCornerRadius="10dp"
 
-        <ImageView
-            android:id="@+id/image_book_cover"
-            android:layout_width="90dp"
-            android:layout_height="140dp"
-            android:layout_margin="15dp"
-            tools:src="@tools:sample/avatars">
-        </ImageView>
+        >
 
-        <TextView
-            android:id="@+id/text_book_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_toEndOf="@+id/image_book_cover"
-            android:layout_toRightOf="@+id/image_book_cover"
-            android:text="title" />
-
-        <TextView
-            android:id="@+id/text_book_author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/text_book_title"
-            android:layout_margin="10dp"
-            android:layout_toEndOf="@+id/image_book_cover"
-            android:layout_toRightOf="@+id/image_book_cover"
-            android:text="author" />
-
-        <TextView
-            android:id="@+id/text_book_year"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/text_book_author"
             android:layout_margin="10dp"
-            android:layout_toEndOf="@+id/image_book_cover"
-            android:layout_toRightOf="@+id/image_book_cover"
-            android:text="year" />
-    </RelativeLayout>
 
-    <LinearLayout
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/image_book_cover"
+                android:layout_width="105dp"
+                android:layout_height="140dp"
+                android:layout_margin="15dp"
+                android:background="@drawable/view_book_book_cover"
+                android:padding="5dp"
+                tools:src="@tools:sample/avatars"/>
+
+            <TextView
+                android:id="@+id/text_book_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_toEndOf="@+id/image_book_cover"
+                android:layout_toRightOf="@+id/image_book_cover"
+                android:text="title"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/text_book_author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/text_book_title"
+                android:layout_marginTop="10dp"
+                android:layout_toEndOf="@+id/image_book_cover"
+                android:layout_toRightOf="@+id/image_book_cover"
+                android:text="author"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/text_book_year"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/text_book_author"
+                android:layout_marginTop="10dp"
+                android:layout_toEndOf="@+id/image_book_cover"
+                android:layout_toRightOf="@+id/image_book_cover"
+                android:text="year"
+                android:textSize="18sp" />
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/view_book_item_bakground"
-        android:orientation="horizontal">
+        app:cardCornerRadius="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Pages:" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/text_book_all_pages"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="var" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Current Page: " />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Pages" />
 
-        <TextView
-            android:id="@+id/text_book_curent_page"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="var" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Current Page" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Progress:" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Progress" />
 
-        <TextView
-            android:id="@+id/text_book_progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="var" />
+            </LinearLayout>
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="10dp"
+                android:orientation="vertical">
 
-    <LinearLayout
+                <TextView
+                    android:id="@+id/text_book_all_pages"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="v" />
+
+                <TextView
+                    android:id="@+id/text_book_curent_page"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="v" />
+
+                <TextView
+                    android:id="@+id/text_book_progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="v" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="25dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Pages Per Day" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Pages Left" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="Days Left" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/text_book_pages_per_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="v" />
+
+                <TextView
+                    android:id="@+id/text_book_pages_left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="v" />
+
+                <TextView
+                    android:id="@+id/text_book_days_left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="v" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/view_book_item_bakground"
-        android:orientation="horizontal">
+        app:cardCornerRadius="10dp">
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Pages per day " />
+            android:orientation="vertical"
+            android:padding="10dp">
 
-        <TextView
-            android:id="@+id/text_book_pages_per_day"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="var" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Pages left " />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Started" />
 
-        <TextView
-            android:id="@+id/text_book_pages_left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="var" />
+                <TextView
+                    android:id="@+id/text_book_date_added"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="v"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Days left " />
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/text_book_days_left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="var" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
 
-    </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Last active" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@drawable/view_book_item_bakground"
-        android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/text_book_date_last_page"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="v"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"/>
+            </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Started date " />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/text_book_date_added"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="var" />
+    </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@drawable/view_book_item_bakground"
-        android:orientation="horizontal">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Last active date" />
-
-    <TextView
-        android:id="@+id/text_book_date_last_page"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="var" />
-    </LinearLayout>
 
     <Button
         android:id="@+id/button_add_current_page"
