--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -1,61 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.book.AddBookActivity"
-    android:orientation="vertical"
-    >
+    android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/edit_text_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:elevation="2dp"
-        android:inputType="textMultiLine"
-        android:padding="30sp"
-        android:hint="title"
-        />
-    <EditText
-        android:id="@+id/edit_text_author"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:elevation="2dp"
-        android:inputType="textMultiLine"
-        android:padding="30sp"
-        android:hint="author"
-        />
-    <EditText
-        android:id="@+id/edit_text_year"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:elevation="2dp"
-        android:inputType="textMultiLine"
-        android:padding="30sp"
-        android:hint="year"
-        />
-    <EditText
-        android:id="@+id/edit_text_all_pages"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:elevation="2dp"
-        android:inputType="textMultiLine"
-        android:padding="30sp"
-        android:hint="number of pages"
-        />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".ui.book.AddBookActivity"
+            android:layout_margin="10dp"
+            >
+
+            <EditText
+                android:id="@+id/edit_text_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:hint="title"
+                android:inputType="textMultiLine"
+                android:padding="30sp" />
+
+            <EditText
+                android:id="@+id/edit_text_author"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:hint="author (optional)"
+                android:inputType="textMultiLine"
+                android:padding="30sp" />
+
+            <EditText
+                android:id="@+id/edit_text_year"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:hint="year (optional)"
+                android:inputType="textMultiLine"
+                android:padding="30sp" />
+
+            <EditText
+                android:id="@+id/edit_text_all_pages"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:hint="number of pages"
+                android:inputType="textMultiLine"
+                android:padding="30sp" />
+
+        </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
