--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <color name="appBackground">#F8F6EC</color>
-    <color name="cardBackground">#F8F6EC</color>
+    <color name="appBackground">#FFFFFF</color>
+    <color name="cardBackground">#F8EEBE</color>
 </resources>
