--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -17,14 +17,13 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/image_book_cover"
                 android:layout_width="105dp"
                 android:layout_height="140dp"
-                android:layout_margin="15dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/view_book_book_cover"
                 android:padding="5dp"
                 tools:src="@tools:sample/avatars" />
@@ -33,7 +32,7 @@
                 android:id="@+id/text_book_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
                 android:layout_toEndOf="@+id/image_book_cover"
                 android:layout_toRightOf="@+id/image_book_cover"
                 android:text="title"
@@ -45,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/text_book_title"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/image_book_cover"
                 android:layout_toRightOf="@+id/image_book_cover"
                 android:text="author"
@@ -56,7 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/text_book_author"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/image_book_cover"
                 android:layout_toRightOf="@+id/image_book_cover"
                 android:text="year"
@@ -69,6 +68,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:layout_margin="10dp"
         app:cardCornerRadius="10dp">
 
         <LinearLayout
@@ -187,6 +187,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:layout_margin="10dp"
         app:cardCornerRadius="10dp">
 
         <LinearLayout
@@ -227,6 +228,24 @@
 
                 <TextView
                     android:id="@+id/text_book_date_last_page"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:text="v" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Status" />
+
+                <TextView
+                    android:id="@+id/text_book_reading_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
