--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -6,5 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="current page"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
     />
 </RelativeLayout>
