--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -11,8 +11,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
-        android:layout_margin="15dp">
+        android:layout_margin="15dp"
+        app:cardCornerRadius="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -67,8 +67,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_margin="10dp"
+        android:layout_marginTop="5dp"
         app:cardCornerRadius="10dp">
 
         <LinearLayout
@@ -186,8 +186,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_margin="10dp"
+        android:layout_marginTop="5dp"
         app:cardCornerRadius="10dp">
 
         <LinearLayout
@@ -234,6 +234,7 @@
                     android:layout_marginLeft="20dp"
                     android:text="v" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -264,5 +265,12 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="Add Current Page" />
+
+    <Button
+        android:id="@+id/button_edit_book"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="edit book" />
 
 </LinearLayout>
