--- a/app/src/main/res/layout/activity_edit_book.xml
+++ b/app/src/main/res/layout/activity_edit_book.xml
@@ -43,6 +43,13 @@
             android:layout_marginTop="10dp"
             android:text="Finished Reading"
             />
+        <Button
+            android:id="@+id/button_save_new_book"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="SAVE"
+            />
 
     </LinearLayout>
 
