MainAct: bottom menu animation disable MainAct: top menu AddBook option MainAct: loading icon before recyclerview ViewBookAct: top menu EditBook and DeleteBook options

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="?android:attr/windowBackground"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/bottom_nav_menu"
+        app:itemHorizontalTranslationEnabled="false"
+        app:labelVisibilityMode="labeled"
+        app:itemIconSize="25sp"
+        />
 
 </RelativeLayout>
