--- a/app/src/main/res/layout/book_adapter.xml
+++ b/app/src/main/res/layout/book_adapter.xml
@@ -8,7 +8,6 @@
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="8dp"
     app:cardCornerRadius="7sp"
-
     >
 
     <RelativeLayout
@@ -23,8 +22,8 @@
             android:layout_below="@+id/text_view_title"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
-            android:textSize="16sp"
-            android:text="sssss" />
+            android:text="year"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/text_view_title"
@@ -44,14 +43,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_view_title"
-            android:layout_toRightOf="@+id/text_view_year"
+            android:layout_marginLeft="10dp"
             android:layout_toEndOf="@+id/text_view_year"
+            android:layout_toRightOf="@+id/text_view_year"
             android:ellipsize="end"
             android:maxHeight="200dp"
             android:maxLines="5"
             android:text="Description"
-            android:textSize="16sp"
-            android:layout_marginLeft="10dp"/>
+            android:textSize="16sp" />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
