--- a/app/src/main/res/layout/fragment_finished_books.xml
+++ b/app/src/main/res/layout/fragment_finished_books.xml
@@ -22,4 +22,13 @@
         android:background="@color/appBackground"
         android:visibility="gone"/>
 
+    <TextView
+        android:id="@+id/text_empty_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="center"
+        android:textSize="20sp"
+        android:text="empty"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
