--- a/app/src/main/res/layout/book_adapter.xml
+++ b/app/src/main/res/layout/book_adapter.xml
@@ -7,7 +7,9 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="8dp"
-    app:cardCornerRadius="10sp">
+    app:cardCornerRadius="10sp"
+    android:minHeight="100dp"
+    >
 
     <RelativeLayout
         android:layout_width="wrap_content"
