About Act design About Act added Add Book act: use only number for Year

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
 
     <color name="cardTextTitle">#121212</color>
 
+    <color name="aboutTextMain">#171717</color>
+    <color name="aboutTetxtSecond">#656464</color>
+
 </resources>
