--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -41,7 +41,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:hint="year (optional)"
-            android:inputType="textMultiLine" />
+            android:inputType="number" />
 
         <EditText
             android:id="@+id/edit_text_all_pages"
