--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,4 +6,9 @@
         android:title="Add New Book"
         android:icon="@drawable/ic_baseline_add_24"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/about_app"
+        android:title="About"
+        android:icon="@drawable/ic_baseline_info_24"
+        app:showAsAction="ifRoom" />
 </menu>
