ui: View Book new design ui: fix

--- a/app/src/main/res/layout/fragment_finished_books.xml
+++ b/app/src/main/res/layout/fragment_finished_books.xml
@@ -5,7 +5,9 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.home.HomeFragment"
+    android:background="@color/appBackground"
+    >
 
     <ProgressBar
         android:id="@+id/progress_bar"
