--- a/app/src/main/res/layout/activity_edit_book.xml
+++ b/app/src/main/res/layout/activity_edit_book.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/appBackground"
     tools:context=".ui.book.EditBookActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:orientation="vertical">
+        android:background="@color/appBackground"
+        android:orientation="vertical"
+        android:padding="15dp">
 
         <EditText
             android:id="@+id/edit_text_title_edit"
@@ -18,43 +20,47 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="title" />
+
         <EditText
             android:id="@+id/edit_text_author_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="author" />
+
         <EditText
             android:id="@+id/edit_text_year_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="year" />
+
         <EditText
             android:id="@+id/edit_text_pages_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="pages"
-            android:inputType="number"/>
+            android:inputType="number" />
+
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/switch_reading_status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Finished Reading"
-            />
+            android:text="Finished Reading" />
+
         <Button
             android:id="@+id/button_book_cover_change"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Set Book cover"
-            />
+            android:text="Set Book cover" />
+
         <ImageView
             android:id="@+id/image_book_cover"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
