--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -12,43 +12,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="3dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="5dp">
-
-            <ImageView
-                android:id="@+id/image_book_cover"
-                android:layout_width="105dp"
-                android:layout_height="140dp"
-                android:layout_marginRight="10dp"
-                android:layout_margin="5dp"
-                />
+            android:layout_margin="5dp"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/text_book_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
-                android:layout_toEndOf="@+id/image_book_cover"
-                android:layout_toRightOf="@+id/image_book_cover"
+                android:gravity="center"
                 android:text="title"
+                android:textAllCaps="true"
+                android:textColor="@color/textBookTitle"
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/text_book_author"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/text_book_title"
                 android:layout_marginTop="5dp"
-                android:layout_toEndOf="@+id/image_book_cover"
-                android:layout_toRightOf="@+id/image_book_cover"
+                android:gravity="center"
                 android:text="author"
-                android:textSize="20sp" />
+                android:textColor="@color/textBookAuthor"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/text_book_year"
@@ -56,20 +49,28 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/text_book_author"
                 android:layout_marginTop="5dp"
-                android:layout_toEndOf="@+id/image_book_cover"
-                android:layout_toRightOf="@+id/image_book_cover"
+                android:gravity="center"
                 android:text="year"
-                android:textSize="18sp" />
+                android:textColor="@color/textBookYear"
+                android:textSize="16sp" />
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:text="STATS"
+        android:textColor="@color/textSectionHeader"
+        android:textStyle="bold" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_marginTop="5dp"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="2dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -79,59 +80,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Pages" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Current Page" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Progress" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="15dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/text_book_all_pages"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="v" />
-
-                <TextView
-                    android:id="@+id/text_book_curent_page"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="v" />
-
-                <TextView
-                    android:id="@+id/text_book_progress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="v" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="15dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -183,12 +133,20 @@
 
     </androidx.cardview.widget.CardView>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:text="INFO"
+        android:textColor="@color/textSectionHeader"
+        android:textStyle="bold" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_marginTop="5dp"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="2dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -254,6 +212,64 @@
                     android:text="v" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Pages" />
+
+                <TextView
+                    android:id="@+id/text_book_all_pages"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:text="v" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Current Page" />
+
+                <TextView
+                    android:id="@+id/text_book_curent_page"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:text="v" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Progress" />
+
+                <TextView
+                    android:id="@+id/text_book_progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:text="v" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
@@ -262,10 +278,9 @@
         android:id="@+id/button_add_current_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="15dp"
         android:layout_gravity="center"
-        android:text="Add Current Page"
         android:background="@color/colorPrimary"
-        android:textColor="@color/buttonAddPageText"
-        />
+        android:padding="15dp"
+        android:text="Add Current Page"
+        android:textColor="@color/buttonAddPageText" />
 </LinearLayout>
