--- a/app/src/main/res/layout/book_adapter.xml
+++ b/app/src/main/res/layout/book_adapter.xml
@@ -7,9 +7,8 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="8dp"
-    app:cardCornerRadius="10sp"
     android:minHeight="100dp"
-    >
+    app:cardCornerRadius="10sp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -36,9 +35,8 @@
             android:maxLines="1"
             android:paddingBottom="10sp"
             android:text="Title"
-            android:textSize="20sp"
             android:textColor="@color/cardTextTitle"
-            />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/text_view_author"
