--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--    <color name="colorPrimary">#6200EE</color>-->
-    <!--    <color name="colorPrimaryDark">#3700B3</color>-->
     <color name="colorPrimary">#272727</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="appBar">#F1F1F1</color>
 
+    <!-- GENERAL -->
     <color name="appBackground">#F1F1F1</color>
     <color name="cardBackground">#A1A1A1</color>
 
