--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-<!--        <item name="appBackground">@color/appBackground</item>-->
-    </style>
 
+
+<!--        <item name="actionBarStyle">@color/appBar</item>-->
+<!--        <item name="android:textColorPrimary">@color/abc_primary_text_material_light</item>-->
+<!--        <item name="actionMenuTextColor">@color/abc_primary_text_material_light</item>-->
+<!--        <item name="android:textColorSecondary">@color/abc_secondary_text_material_light</item>-->
+    </style>
 </resources>
