--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -75,23 +75,49 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:orientation="vertical"
-                android:paddingLeft="20dp">
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/section_line"
+                android:orientation="horizontal"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                android:paddingBottom="5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Pages per day"
                     android:textColor="@color/textSectionItem"
-                    android:textSize="16sp"
+                    android:textSize="16sp" />
 
-                    />
+                <TextView
+                    android:id="@+id/text_book_pages_per_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="right"
+                    android:text="v"
+                    android:textColor="@color/textSectionItem"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/section_line"
+                android:orientation="horizontal"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                android:paddingBottom="5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -101,9 +127,13 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/text_book_pages_left"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Days left"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="right"
+                    android:text="v"
                     android:textColor="@color/textSectionItem"
                     android:textSize="16sp" />
 
@@ -112,36 +142,27 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:orientation="vertical"
-                android:padding="10dp"
-                android:paddingEnd="40dp"
-                android:paddingRight="40dp">
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                android:paddingBottom="5dp">
 
                 <TextView
-                    android:id="@+id/text_book_pages_per_day"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:text="x"
-                    android:textColor="@color/textSectionItem"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/text_book_pages_left"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:text="x"
+                    android:text="Days left"
                     android:textColor="@color/textSectionItem"
                     android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/text_book_days_left"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:text="x"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="right"
+                    android:text="v"
                     android:textColor="@color/textSectionItem"
                     android:textSize="16sp" />
 
@@ -353,13 +374,23 @@
 
     </androidx.cardview.widget.CardView>
 
+    <!--    <Button-->
+    <!--        style="@style/Widget.AppCompat.Button"-->
+    <!--        android:id="@+id/button_add_current_page"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_gravity="center"-->
+    <!--        android:background="@drawable/button_add_book"-->
+    <!--        android:padding="15dp"-->
+    <!--        android:text="Add Current Page"-->
+    <!--        android:textColor="@color/buttonAddPageText" />-->
+
     <Button
         android:id="@+id/button_add_current_page"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@color/colorPrimary"
         android:padding="15dp"
-        android:text="Add Current Page"
-        android:textColor="@color/buttonAddPageText" />
+        android:text="Add Current Page"/>
 </LinearLayout>
