--- a/app/src/main/res/layout/fragment_finished_books.xml
+++ b/app/src/main/res/layout/fragment_finished_books.xml
@@ -9,6 +9,10 @@
     android:background="@color/appBackground"
     >
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="100dp"
@@ -22,7 +26,8 @@
         android:layout_height="match_parent"
         tools:listitem="@layout/book_adapter"
         android:background="@color/appBackground"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:layout_marginTop="50dp"/>
 
     <TextView
         android:id="@+id/text_empty_list"
