--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -5,16 +5,21 @@
     android:layout_height="match_parent"
     android:background="@color/appBackground">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
         android:layout_margin="10dp"
-        android:orientation="vertical"
-        tools:context=".ui.book.AddBookActivity"
         android:background="@color/appBackground"
-        >
+        android:orientation="vertical"
+        tools:context=".ui.book.AddBookActivity">
+
 
         <EditText
             android:id="@+id/edit_text_title"
