--- a/app/src/main/res/layout/activity_edit_book.xml
+++ b/app/src/main/res/layout/activity_edit_book.xml
@@ -7,9 +7,14 @@
     android:background="@color/appBackground"
     tools:context=".ui.book.EditBookActivity">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
         android:background="@color/appBackground"
         android:orientation="vertical"
         android:padding="15dp">
@@ -50,17 +55,17 @@
             android:layout_marginTop="10dp"
             android:text="Finished Reading" />
 
-<!--        <Button-->
-<!--            android:id="@+id/button_book_cover_change"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="10dp"-->
-<!--            android:text="Set Book cover" />-->
+        <!--        <Button-->
+        <!--            android:id="@+id/button_book_cover_change"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="10dp"-->
+        <!--            android:text="Set Book cover" />-->
 
-<!--        <ImageView-->
-<!--            android:id="@+id/image_book_cover"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content" />-->
+        <!--        <ImageView-->
+        <!--            android:id="@+id/image_book_cover"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content" />-->
 
     </LinearLayout>
 
